21. Kubernetes/Deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: send
  namespace: send
spec:
  replicas: 1
  selector:
    matchLabels:
      app: send
  template:
    metadata:
      labels:
        app: send
    spec:
      nodeSelector:
        topology.kubernetes.io/region: vanaheim
      containers:
        - name: send
          image: registry.gitlab.com/timvisee/send:v3.4.23
          ports:
            - containerPort: 1234
          volumeMounts:
            - name: data
              mountPath: /uploads
              subPath: uploads
          resources:
            limits:
              memory: '768Mi'
              cpu: '1'
            requests:
              memory: '256Mi'
              cpu: '250m'
        - name: redis
          image: redis:7-bookworm
          ports:
            - containerPort: 6379
          volumeMounts:
            - name: data
              mountPath: /data
              subPath: redis
          resources:
            limits:
              memory: '256Mi'
              cpu: '250m'
            requests:
              memory: '128Mi'
              cpu: '125m'
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: send-pvc
