21. Kubernetes/Service.yml
apiVersion: v1
kind: Service
metadata:
  name: send
  namespace: send
spec:
  type: ClusterIP
  selector:
    app: send
  ports:
    - name: 'http'
      port: 80
      targetPort: 1234
      protocol: TCP
