21. Kubernetes/Ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: send
  namespace: send
  annotations:
    cert-manager.io/issuer: mtps.pl-cf
    cert-manager.io/issuer-kind: ClusterOriginIssuer
    cert-manager.io/issuer-group: cert-manager.k8s.cloudflare.com
spec:
  tls:
    - hosts:
        - send.mtps.pl
      secretName: send.mtps.pl-crt
  rules:
    - host: send.mtps.pl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: send
                port:
                  name: http
